// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. client-side: 1. client-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation")
    

      ↓ ↓ ↓ ↓ ↓ ↓

import useSSRComputation_Client from "use-ssr-computation.runtime/lib/useSSRComputation_Client";
const x = useSSRComputation_Client(
  () =>
    import(
      /* webpackChunkName: "default-ssr-computations" */ "./a.ssr-computation"
    ),
  "./a.ssr-computation",
);

`;

exports[`macros 1. no usage: 1. no usage 1`] = `

import { useSSRComputation } from "../lib/index.macro"

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros 2. multiple-imports-client-side: 2. multiple-imports-client-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation")
const y = useSSRComputation("./b.ssr-computation")
    

      ↓ ↓ ↓ ↓ ↓ ↓

import useSSRComputation_Client from "use-ssr-computation.runtime/lib/useSSRComputation_Client";
const x = useSSRComputation_Client(
  () =>
    import(
      /* webpackChunkName: "default-ssr-computations" */ "./a.ssr-computation"
    ),
  "./a.ssr-computation",
);
const y = useSSRComputation_Client(
  () =>
    import(
      /* webpackChunkName: "default-ssr-computations" */ "./b.ssr-computation"
    ),
  "./b.ssr-computation",
);

`;

exports[`macros 2. server-side: 2. server-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation");
    

      ↓ ↓ ↓ ↓ ↓ ↓

import __a from "./a.ssr-computation";
import useSSRComputation_Server from "use-ssr-computation.runtime/lib/useSSRComputation_Server";
const x = useSSRComputation_Server(__a, "./a.ssr-computation");

`;

exports[`macros 3. custom-wepback-chunk-client-side: 3. custom-wepback-chunk-client-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation", "custom-chunk-name")
  

      ↓ ↓ ↓ ↓ ↓ ↓

import useSSRComputation_Client from "use-ssr-computation.runtime/lib/useSSRComputation_Client";
const x = useSSRComputation_Client(
  () =>
    import(
      /* webpackChunkName: "custom-chunk-name-ssr-computations" */ "./a.ssr-computation"
    ),
  "./a.ssr-computation",
  "custom-chunk-name",
);

`;

exports[`macros 3. multiple-imports-server-side: 3. multiple-imports-server-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation")
const y = useSSRComputation("./b.ssr-computation")
    

      ↓ ↓ ↓ ↓ ↓ ↓

import __b from "./b.ssr-computation";
import __a from "./a.ssr-computation";
import useSSRComputation_Server from "use-ssr-computation.runtime/lib/useSSRComputation_Server";
const x = useSSRComputation_Server(__a, "./a.ssr-computation");
const y = useSSRComputation_Server(__b, "./b.ssr-computation");

`;
